# arc-material-theme

./: arc-theme-upgrade  configure.ac
common/: Makefile.am  index.theme  index.theme-dark  index.theme-darker
common/gnome-shell/3.14/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.16/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.16/sass/: _colors.scss
common/gnome-shell/3.18/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.18/sass/: _colors.scss
common/gtk-2.0/: gtkrc  gtkrc-dark  gtkrc-darker  temp.css  xfce-notify.rc
common/gtk-2.0/menubar-toolbar/: menubar-toolbar-dark.rc
common/gtk-3.0/3.20/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.20/sass/: _colors.scss  _unity.scss
